rpa-builder/6.5/modules/ROOT/pages/toolbox-aws-document-processing.adoc


= Document Processing

The document processing action steps enable you to extract data from documents and translate text by using the Amazon Translate and Amazon Textract services.

include::partial$aws-doc-processing.adoc[tag=general]

To use these action steps, you need an active subscription to AWS.

* xref:toolbox-aws-operations-credentials-for-aws.adoc[Credentials For AWS]
+
The Credentials for AWS action step enables you to set up your AWS credentials one time and then reference them in any other AWS action step that requires them.
* xref:toolbox-aws-operations-entities-with-aws.adoc[Entitites With AWS]
+
The Entities with AWS action step enables you to use Amazon Comprehend to inspect text for named entities and return information about them.
* xref:toolbox-aws-operations-erp-docs-with-aws.adoc[ERP Docs With AWS]
+
The ERP Docs with AWS enables you to use Amazon Textract to analyze invoices and receipts to extract relevant data.
* xref:toolbox-aws-operations-key-values-with-aws.adoc[Key Values With AWS]
+
The Key values with AWS action step enables you to extract form data by sending a local file to the AWS Textract service, which returns the extracted key-value pairs.
* xref:toolbox-aws-operations-ocr-with-aws.adoc[OCR With AWS]
+
The OCR with AWS action step enables you to recognize the text in a document by sending a local file to the AWS Textract service, which returns the extracted values.
* xref:toolbox-aws-operations-queries-with-aws.adoc[Queries With AWS] 
+
The Queries with AWS action step enables you to extract specific data from a document by specifying a query parameter so that the response contains the data you need, without having to apply further filtering on the JSON output to get the relevant values.
* xref:toolbox-aws-operations-signature-detection-with-aws.adoc[]
+
The Signature Detection with AWS action step enables you to detect single or multiple signatures in files such as PNG, JPEG, or PDF.
* xref:toolbox-aws-operations-tables-with-aws.adoc[Tables With AWS]
+
The Tables with AWS action step enables you to recognize the text values inside a table by sending a local file to the AWS Textract service, which returns the extracted values.
* xref:toolbox-aws-operations-translate-with-aws.adoc[Translate With AWS]
+
The translate with AWS action step enables you to use the Amazon Translate service to translate the specified text.

== See Also

* https://docs.aws.amazon.com/comprehend/latest/dg/what-is.html[Amazon Comprehend^]
* https://docs.aws.amazon.com/textract/latest/dg/what-is.html[Amazon Textract^]
* https://docs.aws.amazon.com/translate/latest/dg/what-is.html[Amazon Translate^]
